--- a/LunoxiLife.html
+++ b/LunoxiLife.html
@@ -5,7 +5,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="RochanneLife">
 
-<link rel="apple-touch-icon" href="icon.png">
+<link rel="apple-touch-icon" href="Icoon.png">
 <link rel="manifest" href="manifest.json">
 
 <meta charset="UTF-8">
@@ -205,3 +205,4 @@ updateUI();
 
 </body>
 </html>
+
